--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
 	"require": {
 		"laravel/framework": "5.0.*",
         "tymon/jwt-auth": "0.5.*",
-		"barryvdh/laravel-cors": "0.7.*"
-	},
+		"barryvdh/laravel-cors": "0.7.*",
+		"zircote/swagger-php": "^2.0"
+    },
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
 		"phpspec/phpspec": "~2.1"
