--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.0.*",
         "tymon/jwt-auth": "0.5.*",
 		"barryvdh/laravel-cors": "0.7.*",
-		"zircote/swagger-php": "^2.0"
+		"zircote/swagger-php": "^2.0",
+		"barryvdh/laravel-ide-helper": "^2.1"
     },
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
