--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
-		{
+{
 	"name": "laravel/laravel",
 	"description": "The Laravel Framework.",
 	"keywords": ["framework", "laravel"],
@@ -9,7 +9,7 @@
         "tymon/jwt-auth": "0.5.*",
 		"barryvdh/laravel-cors": "0.7.*",
 		"zircote/swagger-php": "^2.0",
-		"barryvdh/laravel-ide-helper": "^2.1"
+		"barryvdh/laravel-ide-helper": "v2.1.2"
     },
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
